Add constraint for zoom level

--- a/app/views/gantts/show.html.erb
+++ b/app/views/gantts/show.html.erb
@@ -334,6 +334,7 @@
 <% end %>
 
 
+<% if zoom.to_i == 16 %>
 <%= javascript_tag do %>
 $(document).ready(function(){
 
@@ -401,3 +402,4 @@ $(document).ready(function(){
 </div>
 </div>
 </div>
+<% end %>
