--- a/app/views/gantts/show.html.erb
+++ b/app/views/gantts/show.html.erb
@@ -90,6 +90,7 @@
   headers_height = header_height
   show_weeks = false
   show_days  = false
+  show_day_numbers = 
 
   if @gantt.zoom > 1
     show_weeks = true
@@ -97,8 +98,13 @@
     if @gantt.zoom > 2
         show_days = true
         headers_height = 3 * header_height
+      if @gantt.zoom > 3
+        show_day_numbers = true
+        headers_height = (3.25 * header_height).to_i
+      end
     end
   end
+
 
   # Width of the entire chart
   g_width = ((@gantt.date_to - @gantt.date_from + 1) * zoom).to_i
@@ -238,7 +244,7 @@
     height = g_height + header_height - 1
     wday = @gantt.date_from.cwday
   %>
-  <% (@gantt.date_to - @gantt.date_from + 1).to_i.times do %>
+  <% (@gantt.date_from).upto(@gantt.date_to) do |day| %>
     <%
       width =  zoom - 1
       style  = ""
@@ -252,6 +258,10 @@
     %>
     <%= content_tag(:div, :style => style, :class => clss) do %>
       <%= day_letter(wday) %>
+      <% if show_day_numbers %>
+        <br />
+        <%= (day).mday %>
+      <% end %>
     <% end %>
     <%
       left = left + width + 1
