--- a/app/views/gantts/show.html.erb
+++ b/app/views/gantts/show.html.erb
@@ -90,7 +90,7 @@
   headers_height = header_height
   show_weeks = false
   show_days  = false
-  show_day_numbers = 
+  show_day_numbers = false
 
   if @gantt.zoom > 1
     show_weeks = true
